--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,10 @@
     <dimen name="find_client_image_view_height">100dp</dimen>
     <dimen name="sync_button_width">50dp</dimen>
     <dimen name="sync_button_height">50dp</dimen>
+    <dimen name="new_client_button_width">100dp</dimen>
+    <dimen name="new_client_button_height">100dp</dimen>
+    <dimen name="new_client_button_margin">16dp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="separator_height">1dp</dimen>
+    <dimen name="separator_margin">30dp</dimen>
 </resources>
