--- a/app/src/main/res/layout/recycle_view_holder.xml
+++ b/app/src/main/res/layout/recycle_view_holder.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/view_holder_root"
     android:layout_width="wrap_content"
     android:layout_height="300dp"
     android:padding="5dp">
