--- a/app/src/main/res/layout/client_view_layout.xml
+++ b/app/src/main/res/layout/client_view_layout.xml
@@ -1,25 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="16dp">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_second_parent_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="16dp"
-        android:src="@drawable/add_parent_icon" />
-
-
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:paddingBottom="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,6 +84,15 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/main_parent_root_container" />
         </LinearLayout>
-    </ScrollView>
 
-</RelativeLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_second_parent_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/add_parent_icon" />
+    </RelativeLayout>
+</ScrollView>
+
