--- a/app/src/main/res/layout/recycle_view_holder.xml
+++ b/app/src/main/res/layout/recycle_view_holder.xml
@@ -2,14 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_holder_root"
+    android:padding="5dp"
     android:layout_width="wrap_content"
-    android:layout_height="300dp"
-    android:padding="5dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/find_client_image_view"
         android:layout_width="200dp"
-        android:layout_height="match_parent"
+        android:layout_height="280dp"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/place_holder_" />
 
@@ -17,8 +18,8 @@
     <FrameLayout
         android:layout_width="200dp"
         android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@+id/find_client_image_view"
         android:background="#6FFF"
         android:orientation="vertical"
         tools:background="#A000">
