--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorPrimarySecond</item>
+        <item name="colorPrimaryDark">@color/colorPrimarySecond</item>
+        <item name="colorAccent">@color/colorPrimarySecond</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -20,6 +20,10 @@
     <style name="MyActionBar" parent="ThemeOverlay.AppCompat.ActionBar">
         <item name="android:textCursorDrawable">@drawable/white_cursor</item>
         <item name="android:cursorVisible">true</item>
+    </style>
+
+    <style name="MyActionBarMain" parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorPrimary">@color/colorPrimarySecond</item>
     </style>
 
 </resources>
