--- a/app/src/main/res/layout/view_pager_item_layout.xml
+++ b/app/src/main/res/layout/view_pager_item_layout.xml
@@ -1,24 +1,65 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_pager_root_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="5dp"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/view_pager_item_photo_image_view"
-        android:layout_width="250dp"
-        android:layout_height="300dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/pager_visit_controls"
+        android:layout_alignParentTop="true"
+        android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/view_pager_item_name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/view_pager_item_photo_image_view"
-        android:layout_centerHorizontal="true"
-        android:text="Hello "
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_18_sp"
-        android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+            <include
+                android:id="@+id/pager_child_include"
+                layout="@layout/pager_child_view_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="@dimen/separator_margin"
+                android:layout_marginRight="@dimen/separator_margin"
+                android:layout_marginTop="8dp"
+                android:background="@color/black"
+                android:visibility="visible" />
+
+            <include
+                android:id="@+id/pager_main_parent_layout"
+                layout="@layout/pager_parent_view_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/pager_child_include" />
+
+
+            <View
+                android:id="@+id/pager_separator"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="@dimen/separator_margin"
+                android:layout_marginRight="@dimen/separator_margin"
+                android:layout_marginTop="8dp"
+                android:background="@color/black"
+                android:visibility="gone" />
+
+            <FrameLayout
+                android:id="@+id/pager_second_parent_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/pager_separator" />
+
+        </LinearLayout>
+
+    </ScrollView>
 </RelativeLayout>
