--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="colorAccent">#26282e</color>
     <color name="white">#897d7d</color>
     <color name="orangeLight">#edb579</color>
+    <color name="orangeLightButton">#e6a141</color>
     <color name="orange">#ff9b43</color>
+    <color name="orangeStrong">#ff7700</color>
+    <color name="gray">#8f8b87</color>
     <color name="black">#000000</color>
 </resources>
