--- a/app/src/main/res/layout/activity_main_layour.xml
+++ b/app/src/main/res/layout/activity_main_layour.xml
@@ -30,9 +30,9 @@
         <FrameLayout
             android:id="@+id/search_container_view"
             android:layout_width="match_parent"
-            android:layout_centerHorizontal="true"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
 
         <android.support.design.widget.FloatingActionButton
