--- a/app/src/main/res/layout/dialog_fragment_visit_settings_layout.xml
+++ b/app/src/main/res/layout/dialog_fragment_visit_settings_layout.xml
@@ -30,23 +30,24 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/settings_dialog_visit_count_edit_text_layout"
             android:layout_width="140dp"
-            android:padding="5dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/settings_dialog_title"
-            android:layout_centerHorizontal="true">
+            android:layout_centerHorizontal="true"
+            android:padding="5dp">
 
             <EditText
                 android:id="@+id/settings_dialog_visit_count_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:gravity="center"
                 android:hint="@string/max_visits_hint"
                 android:inputType="number"
-                android:background="@android:color/transparent"
                 android:lines="1"
                 android:maxLength="10"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:text="10" />
 
         </android.support.design.widget.TextInputLayout>
 
