almost finally improvements, counter, sync, visits, additional views

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -23,17 +23,11 @@
         android:orderInCategory="200"
         android:title="@string/sync"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/action_reload_db"
-        android:icon="@drawable/ic_action_refresh"
-        android:orderInCategory="200"
-        android:title="@string/total_reload"
-        app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_set_visits"
         android:icon="@drawable/ic_action_refresh"
         android:orderInCategory="200"
-        android:title="@string/settings"
+        android:title="@string/set_max_visits"
         app:showAsAction="never" />
 </menu>
