--- a/app/src/main/res/layout/activity_clients_view_pager_layout.xml
+++ b/app/src/main/res/layout/activity_clients_view_pager_layout.xml
@@ -33,33 +33,63 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center"
+        android:orientation="vertical"
         android:padding="5dp">
 
-        <TextView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="@string/last_visited"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_18_sp" />
-
-        <TextView
-            android:id="@+id/pager_last_visited_text_view"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="@string/text_example"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_18_sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/pager_visit_button"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:text="@string/visits"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_18_sp" />
+
+            <TextView
+                android:id="@+id/pager_client_visits_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="13dp"
+                android:text="2/10"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_18_sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button"
-            android:text="@string/visit_button"
-            android:textAllCaps="false"
-            android:textSize="@dimen/text_18_sp" />
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="@string/last_visited"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_18_sp" />
+
+            <TextView
+                android:id="@+id/pager_last_visited_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="@string/text_example"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_18_sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/pager_visit_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button"
+                android:text="@string/visit_button"
+                android:textAllCaps="false"
+                android:textSize="@dimen/text_18_sp" />
+        </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
